// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductName should merge classes and props 1`] = `
<a
  className="wc-block-components-product-name lorem-ipsum"
  href="/"
  rel="nofollow"
>
  Test product
</a>
`;

exports[`ProductName should not render a link if disabled is true 1`] = `
<span
  className="wc-block-components-product-name"
>
  Test product
</span>
`;

exports[`ProductName should render a link if disabled is false 1`] = `
<a
  className="wc-block-components-product-name"
  href="/"
>
  Test product
</a>
`;

exports[`ProductName should render a link if disabled is not defined 1`] = `
<a
  className="wc-block-components-product-name"
  href="/"
>
  Test product
</a>
`;
